<resources>
    <string name="app_name">黑石顶生物多样性</string>
    <string name="app_launch_title">黑石顶</string>
    <string name="app_launch_title1">生物多样性</string>
    <string name="app_launch_title2">野外实习手册</string>


    <string name="nike_name">用户</string>
    <string name="password">密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="get_vrifyCode">获取验证码</string>
    <string name="reset_pwd_button">"提交"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="queryHint">请输入搜索内容</string>
    <string name="action_settings">Settings</string>
    <string name="title_bar_species">种类</string>
    <string name="title_bar_guide">指南</string>
    <string name="title_bar_add_record">添加记录</string>
    <string name="title_bar_person_cneter">个人中心</string>
    <string name="title_bar_setting">设置</string>
    <array name="sorting_by_order">
        <item>鹳</item>
        <item>鹰</item>
        <item>鸡</item>
        <item>鹤</item>
        <item>鸽</item>
        <item>鹃</item>
        <item>鸮</item>
        <item>雨</item>
        <item>佛</item>
        <item>鴷</item>
        <item>雀</item>
    </array>

    <array name="soting_by_section">
        <item>鹭</item>
        <item>鹰</item>
        <item>雉</item>
        <item>秧</item>
        <item>鸠</item>
        <item>杜</item>
        <item>鸱</item>
        <item>雨</item>
        <item>翠</item>
        <item>蜂</item>
        <item>拟</item>
        <item>啄</item>
        <item>鶺</item>
        <item>叶</item>
        <item>鹃</item>
        <item>鹎</item>
        <item>鹟</item>
        <item>扇</item>
        <item>噪</item>
        <item>鹛</item>
        <item>幽</item>
        <item>绣</item>
        <item>山</item>
        <item>太</item>
        <item>伯</item>
        <item>鸦</item>
        <item>梅</item>
        <item>雀</item>
    </array>

    <!--脊椎动物列表-->
    <array name="vertebrate">
        <item>两栖类</item>
        <item>爬行类</item>
        <item>鸟类</item>
    </array>

    <!--无脊椎动物-->
    <array name="invertebrate">
        <item>石蛃目</item>
        <item>蜉蝣目</item>
        <item>蜻蜓目</item>
        <item>襀翅目</item>
        <item>等翅目</item>
        <item>蜚蠊目</item>
        <item>螳螂目</item>
        <item>竹节虫目</item>
        <item>直翅目</item>
        <item>革翅目</item>
        <item>半翅目</item>
        <item>广翅目</item>
        <item>鞘翅目</item>
        <item>鳞翅目</item>
        <item>双翅目</item>
        <item>膜翅目</item>
    </array>

    <array name="birdTablesName">
        <item>体型</item>
        <item>栖息地</item>
        <item>色调</item>
        <item>喙型喙长</item>
        <item>飞行类型</item>
        <item>尾型</item>
        <item>食性</item>
        <item>模糊特征</item>
        <item>鸣声描述</item>
    </array>

    <array name="insectTablesName">
        <item>体型</item>
        <item>大体特征</item>
        <item>口器</item>
        <item>口式</item>
        <item>触角</item>
        <item>翅</item>
        <item>足</item>
        <item>生活史</item>
        <item>低龄虫态特征</item>
        <item>黑石顶常见科</item>
    </array>

    <array name="reptilesTblesName">
        <item>辨识特征</item>
        <item>体型</item>
        <item>栖息地</item>
        <item>主色</item>
        <item>次色</item>
        <item>食性</item>
        <item>头顶有无大鳞</item>
        <item>模糊特征</item>
    </array>

    <array name="aphibiaTablesName">
        <item>辨识特征</item>
        <item>体型</item>
        <item>色调</item>
        <item>声囊</item>
        <item>婚垫婚刺</item>
        <item>指序与趾序</item>
        <item>蹼与吸盘</item>
        <!--<item>鸣声描述</item>-->
        <item>模糊特征</item>
        <item>生境与习性</item>
        <item>分布范围</item>
        <item>种群状况</item>
    </array>
    <string name="alert_menu_textView">请选择一种查阅类型</string>
    <string name="alert_menu_button1">按目浏览</string>
    <string name="alert_menu_button2">按科浏览</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_search">SearchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
